--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@types/node": "^20",
