--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-zoom-image-hover": "^1.0.0",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
