--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-slick": "^0.30.2",
     "react-zoom-image-hover": "^1.0.0",
+    "slick-carousel": "^1.8.1",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
